crates/ruff/src/rules/flake8_use_pathlib/snapshots/ruff__rules__flake8_use_pathlib__tests__use_pathlib.py.snap
---
source: crates/ruff/src/rules/flake8_use_pathlib/mod.rs
expression: diagnostics
---
- kind:
    PathlibGetcwd: ~
  location:
    row: 6
    column: 9
  end_location:
    row: 6
    column: 20
  fix: ~
  parent: ~
- kind:
    PathlibGetcwd: ~
  location:
    row: 9
    column: 4
  end_location:
    row: 10
    column: 16
  fix: ~
  parent: ~
- kind:
    PathlibGetcwd: ~
  location:
    row: 14
    column: 4
  end_location:
    row: 14
    column: 16
  fix: ~
  parent: ~
- kind:
    PathlibGetcwd: ~
  location:
    row: 18
    column: 9
  end_location:
    row: 18
    column: 20
  fix: ~
  parent: ~
- kind:
    PathlibAbspath: ~
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 33
  fix:
    content: "Path(\"../../hello.py\").resolve()"
    location:
      row: 21
      column: 0
    end_location:
      row: 21
      column: 33
  parent: ~

